<resources>
    <string name="app_name">polihack2020bylos</string>
    <string name="startup_text_patient">I am a patient</string>
    <string name="startup_text_doctor">I am a doctor</string>
    <string name="login_button_text">Login</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_create_an_account">Create an Account</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="signup_button_text">Signup</string>
    <string name="go_to_login">Already have an account?</string>
</resources>