<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientLoginActivity">

    <View
        android:id="@+id/header_circle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/gradient_circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_circle"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/email_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_field_background"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/ripple_effect_mask_button"
                android:text="@string/login_button_text"
                app:layout_constraintEnd_toEndOf="@id/passwordField"
                app:layout_constraintStart_toStartOf="@id/passwordField"
                app:layout_constraintTop_toBottomOf="@id/passwordField"/>

            <EditText
                android:id="@+id/password_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_field_background"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_field_bar" />

            <TextView
                android:id="@+id/delimiter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:text="@string/login_or"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />

            <View
                android:id="@+id/delimiter_left"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/delimitation_line"
                app:layout_constraintEnd_toStartOf="@id/delimiterText"
                app:layout_constraintBottom_toBottomOf="@id/delimiterText"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="10dp"/>

            <View
                android:id="@+id/delimiter_right"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/delimitation_line"
                app:layout_constraintStart_toEndOf="@id/delimiterText"
                app:layout_constraintBottom_toBottomOf="@id/delimiterText"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="toSignupActivity"
                android:text="@string/login_create_an_account"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/passwordField"
                app:layout_constraintTop_toBottomOf="@id/passwordField" />

            <TextView
                android:id="@+id/pass_recovery_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/login_forgot_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/passwordField"
                app:layout_constraintTop_toBottomOf="@+id/PasswordFieldBar"
                android:onClick="resetPassword"/>

            <View
                android:id="@+id/password_field_bar"
                android:layout_width="280dp"
                android:layout_height="5dp"
                android:background="@drawable/active_focus_input_field_bar"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/passwordField"
                app:layout_constraintStart_toStartOf="@id/passwordField" />

            <View
                android:id="@+id/email_field_bar"
                android:layout_width="280dp"
                android:layout_height="5dp"
                android:background="@drawable/active_focus_input_field_bar"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/EmailField"
                app:layout_constraintBottom_toBottomOf="@+id/EmailField" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>